# mod_template

./: Cargo.toml  README.md
flex_mod_macros/: Cargo.toml
flex_mod_macros/src/: lib.rs
flex_mod_macros/src/attributes/: construct.rs  extend_parameter_list.rs  mod.rs
flex_mod_macros/src/attributes/__monomorphize_mod/: attribute_options_pair.rs  mod.rs
flex_mod_macros/src/attributes/__monomorphize_mod/attribute_options/: mod.rs
flex_mod_macros/src/attributes/flex_mod/: mod.rs
flex_mod_macros/src/utils/: substitute_attributes.rs  token_stream_or_syn_error.rs
flex_mod_macros_core/: Cargo.toml
flex_mod_macros_core/src/: lib.rs
flex_mod_macros_core/src/attributes/: extend_parameter_list.rs
flex_mod_macros_core/src/attributes/__monomorphize_mod/: attribute_options_pair.rs  mod.rs
flex_mod_macros_core/src/attributes/__monomorphize_mod/attribute_options/: attribute_substitution_declaration.rs
flex_mod_macros_core/src/attributes/flex_mod/attribute_options/: mod.rs
flex_mod_macros_core/src/helper_attributes/: __SUBSTITUTE.rs  mod.rs
flex_mod_macros_core/src/standalone_attributes/: construct.rs  extend_parameter_list.rs  mod.rs
flex_mod_macros_core/src/utils/: mod.rs  token_stream_or_syn_errors.rs
mod_template_macros/: Cargo.toml
mod_template_macros/src/: lib.rs
mod_template_macros/src/attributes/: construct.rs  mod.rs
mod_template_macros/src/attributes/__monomorphize_mod/: attribute_options_pair.rs  mod.rs
mod_template_macros/src/attributes/__monomorphize_mod/attribute_options/: construction_declaration.rs  mod_header.rs
mod_template_macros/src/attributes/define/: mod.rs
mod_template_macros/src/attributes/define/attribute_options/: attribute_substitution_declaration.rs  construction_declaration.rs  mbe_header.rs  mod.rs
mod_template_macros/src/helper_attributes/: __CONSTRUCT.rs  __SUBSTITUTE.rs
mod_template_macros/src/utils/: mod.rs  substitute_attributes.rs
ui_tests/: Cargo.toml
ui_tests/should-fail/: 1_1-only-fn.rs  1_1-only-fn.stderr  1_1-standalone-only-fn.stderr  2_1-flex-mod-only-mod.stderr  2_2-flex-mod-top-mod-bad-name.stderr  2_3-flex-mod-unknown-target-names.rs  2_3-flex-mod-unknown-target-names.stderr  2_4-flex-mod-bad-construct.rs  2_4-flex-mod-bad-construct.stderr  2_5-flex-mod-top-mod-attributes-below.stderr
ui_tests/tests/: 1_1-construct.rs  1_2-extend-parameter-list.rs  1_3-standalone-together.rs  2_1-basic.rs  2_1-flex-mod-construct.rs  _try_build.rs  x-sqlx.rs
ui_tests/tests/should-fail/: 1_1-standalone-only-fn.rs  1_1-standalone-only-fn.stderr  2_1-bare.rs  2_1-bare.stderr  2_1-flex-mod-only-mod.rs  2_1-flex-mod-only-mod.stderr  2_2-flex-mod-top-mod-bad-name.rs  2_2-flex-mod-top-mod-bad-name.stderr  2_2-top-mod-bad-name.rs  2_2-top-mod-bad-name.stderr  2_3-flex-mod-unknown-target-names.stderr  2_3-unknown-target-names.rs  2_3-unknown-target-names.stderr  2_4-bad-construct.rs  2_4-bad-construct.stderr  2_4-flex-mod-bad-construct.stderr  2_5-flex-mod-top-mod-attributes-below.rs  2_5-flex-mod-top-mod-attributes-below.stderr  2_5-top-mod-attributes-below.rs  2_5-top-mod-attributes-below.stderr
(+5 files in other folders)
