[workspace]

resolver = "2"

members = ["mod_template", "mod_template_macros", "ui_tests"]

[workspace.package]
version = "0.1.1"
license = "MIT"
edition = "2021"
authors = ["Umaĵo <umajho@proton.me>"]
repository = "https://github.com/umajho/mod_template"
description = "Creating macros that define modules from template modules"

[workspace.dependencies]

mod_template = { version = "0.1.1", path = "mod_template" }
mod_template_macros = { version = "0.1.1", path = "mod_template_macros" }
