[package]
name = "flex_mod_macros_core"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lazy_static = "1.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }

[dev-dependencies]
typed-builder = "0.18.0"
